--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ error_log /var/log/nginx/error.log;
 pid /run/nginx.pid;
 
 events {
-    worker_connections 1024;
+    worker_connections 16384;  # Изменено с 1024
 }
 
 http {
