--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ error_log /var/log/nginx/error.log;
 pid /run/nginx.pid;
 
 events {
-    worker_connections 16384;  # Изменено с 1024
+    worker_connections 1024;
 }
 
 http {
@@ -22,6 +22,10 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
+    
+    # Добавлены buffer sizes
+    client_body_buffer_size 16k;
+    client_header_buffer_size 1k;
 
     include /etc/nginx/conf.d/*.conf;
 }
